[package]
name = "bmemcached"
version = "0.2.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
description = "Memcached binary protocol in pure rust with support for 'pools' and consistent hashing. (For now minor versions will break API until v1 is released)"
homepage = "https://github.com/jaysonsantos/bmemcached-rs"
repository = "https://github.com/jaysonsantos/bmemcached-rs"
documentation = "https://jaysonsantos.github.io/bmemcached-rs/bmemcached/index.html"
license = "MIT"

[dependencies]
bitflags = "1.0.0"
byteorder = "1.1.0"
conhash = "0.3.2"
enum_primitive = "0.1.0"
log = "0.3.6"
num = "0.1.31"

[dev-dependencies]
env_logger = "0.3.3"
serde = "1.0.14"
serde_derive= "1.0.14"
serde_json = "1.0.3"