[package]
name = "bmemcached"
version = "0.5.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
description = "Memcached binary protocol in pure rust with support for 'pools' and consistent hashing. (For now minor versions will break API until v1 is released)"
homepage = "https://github.com/jaysonsantos/bmemcached-rs"
repository = "https://github.com/jaysonsantos/bmemcached-rs"
documentation = "https://jaysonsantos.github.io/bmemcached-rs/bmemcached/index.html"
license = "MIT"
readme = "README.md"

[dependencies]
bitflags = "1.0.3"
byteorder = "1.1.0"
conhash = "0.4.0"
error-chain = "0.12.0"
enum_primitive = "0.1.0"
log = "0.4.3"
num = "0.2.0"

[dev-dependencies]
criterion = "0.2.4"
env_logger = "0.5.11"
serde = "1.0.70"
serde_derive= "1.0.70"
serde_json = "1.0.24"

[[bench]]
name = "regression"
harness = false
